2001-12-18  Clint Adams  <clint@zsh.org>

	* 16361: zshconfig.ac, Src/input.c:
	include <stdio.h> to avoid implicit declarations.

2001-12-17  Oliver Kiddle  <opk@zsh.org>

	* 16352: Functions/Misc/zcalc: allow output formats to be
	specified in zcalc

	* 16353: Src/exec.c, Src/lex.c, Src/params.c, Src/parse.c,
	Src/text.c, Src/zsh.h, Doc/Zsh/params.yo, Test/.distfiles,
	Test/A06assign.ztst: add += parameter assignments

2001-12-17  Clint Adams  <clint@zsh.org>

	* 16357: Doc/Zsh/expn.yo, Src/subst.c:
	change (n) to (u) so (n) can be reserved.
	for numeric sorting.

2001-12-17  Oliver Kiddle  <opk@zsh.org>

	* 16351: Src/params.c: fix bug in parameter unset code

2001-12-17  Clint Adams  <clint@zsh.org>

	* 16349: Completion/Debian/Command/.distfiles,
	Completion/Debian/Command/_make-kpkg: completion for
	make-kpkg.

	* 16347: Src/params.c, Src/subst.c:
	tweaks pointed out by Zefram.

2001-12-16  Clint Adams  <clint@zsh.org>

	* 16346: Doc/Zsh/expn.yo: documentation for 16345.

	* 16345: Src/params.c, Src/subst.c:
	(n) flag to remove duplicate array values during
	expansion.

2001-12-15  Clint Adams  <clint@zsh.org>

	* unposted: zshconfig.ac: get rid of evil -Wno-implicit
	in CFLAGS.

2001-12-14  Clint Adams  <clint@zsh.org>

	* 16336: Completion/Debian/Type/_deb_packages:
	use apt-cache --generate pkgnames instead of
	apt-cache dumpavail.

	* 16335: Completion/Debian/Command/_apt:
	add -g, --all-names, --recurse, pkgnames, dotty, policy
	completions for apt-cache.

2001-12-12  Oliver Kiddle  <opk@zsh.org>

	* 16323, 16330: Completion/Unix/Command/_webbrowser,
	Completion/Unix/Type/_urls, Completion/X/Command/_netscape, 
	Completion/Unix/Command/_lynx, Completion/Unix/Command/_links,
	Completion/Unix/Command/_w3m: allow tag-order to select order
	of files and urls instead being fixed to files first

2001-12-11  Clint Adams  <clint@zsh.org>

	* 16327: Completion/Debian/Command/_dpkg:
	glob for udebs as well as debs.

	* 16326: Completion/Unix/Command/_webbrowser,