@@ -1,3 +1,7 @@
+2001-12-18  Oliver Kiddle  <opk@zsh.org>
+
+	* unposted: Src/params.c: small fix to += code from 16353
+
 2001-12-18  Clint Adams  <clint@zsh.org>
 
 	* 16361: zshconfig.ac, Src/input.c:
